--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Dlink</title>
+  <title>Compulynx-practical</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="assets/images/dlink-nbg.png" type="image/x-icon">
+  <link rel="icon" href="assets/images/compulynx.jpeg" type="image/x-icon">
   <!-- Plugins Core Css -->
   <link
     href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
